# AnimalFinderDaily

./: Pasted-Integrating-GPT-4-for-both-region-city-based-animal-selection-and-image-animal-recognition-can-signi-1731648468682.txt  app.py  models.py  pyproject.toml  routes.py
services/: achievement_service.py  gpt_service.py  gpt_service.py - generate_tasks  gpt_service.py - recognize_animal  location_service.py
static/css/: custom.css
static/js/: camera.js  location.js  tasks.js
templates/: badges.html  base.html  index.html  share.html  tasks.html
