[project]
name = "repl-nix-animalsmartselector"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.54.4",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
]
